# mastodon-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.circleci/: config.yml
examples/: albums.py  members.py
mastodon_api/: app.py  db.py  models.py
tests/: test_app.py  test_main.py
