[tool.poetry]
name = "mastodon-api"
version = "0.1.0"
description = "A API to studies."
authors = ["Pery Lemke <pery.lemke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.16.0"
pymongo = "^4.0.1"
black = "^21.12b0"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
